Updated education information

--- a/docs/_data/data.yml
+++ b/docs/_data/data.yml
@@ -78,7 +78,7 @@ education:
             - Learned the fundamentals of machine learning model development and validation.
             - Studied algorithm design, implementation, and optimization for various modeling purposes.
       - degree: AA in  Mathematics
-        university: State College of Florida
+        university: State College of Florida (SCF), Bradenton
         time: 2019
         details: |
           At the State College of Florida I learned the fundamentals of physics and prepared myself for a challenging degree in physics.
