--- a/docs/_data/data.yml
+++ b/docs/_data/data.yml
@@ -228,6 +228,9 @@ skills:
       - name: Tensorflow, Pytorch, SciKit-Learn
         level: 75%
 
+      - name: Linux Server management
+        level: 75%
+
       - name: SQL database management
         level: 50%
 
