--- a/docs/_data/data.yml
+++ b/docs/_data/data.yml
@@ -38,7 +38,7 @@ sidebar:
           level: Native
 
         - idiom: Spanish
-          level: Intermediate
+          level: Beginner/Intermediate
 
     interests:
       title: Interests
@@ -46,7 +46,7 @@ sidebar:
         - item: Programming
           link:
 
-        - item: Camping
+        - item: Outdoorsmanship
           link:
 
         - item: Cooking
