Updated data.yml. It's more effective to comment out information in here, than in index.html.

--- a/docs/_data/data.yml
+++ b/docs/_data/data.yml
@@ -15,7 +15,7 @@ sidebar:
 
     # Sidebar links
     email: GeraldSMeyers@gmail.com
-    phone: 941 705 4369
+    phone: +1 (941) 705-4369
     timezone: EST
     citizenship: United States
     # website: blog.webjeda.com #do not add http://
